--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,14 @@ pydantic==2.1.1
 pydantic_core==2.4.0
 python-dotenv==1.0.0
 PyYAML==6.0.1
-requests==2.22.0
 sniffio==1.3.0
 soupsieve==2.4.1
+selenium==4.12.0
 starlette==0.27.0
 typing_extensions==4.7.1
-urllib3==1.25.11
+urllib3==2.0.5
 uvicorn==0.23.2
 uvloop==0.17.0
 watchfiles==0.19.0
 websockets==11.0.3
+redis==5.0.0
